--- a/UserDasboard/Main/styles.css
+++ b/UserDasboard/Main/styles.css
@@ -8,7 +8,7 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  background-color: #f8f9fa; /* Matches bg-body-tertiary */
+  background-color: #ADD8E6; /* Matches bg-body-tertiary */
   padding: 1rem;
   width: 280px;
 }
