--- a/Signup/styles.css
+++ b/Signup/styles.css
@@ -1,6 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Montserrat:wght@500;700&display=swap");
+
 html,
 body {
+  font-family: "Montserrat" !important;
   height: 100%;
+  margin: 0;
+  background-color: #cdcfcd !important;
 }
 
 .form-signin {
@@ -29,4 +34,8 @@ body {
   margin-bottom: 10px;
   border-top-left-radius: 0 !important;
   border-top-right-radius: 0 !important;
+}
+
+.btn {
+  background-color: #5e766c !important;
 }
