--- a/SpendSense/Dasboard/styles.css
+++ b/SpendSense/Dasboard/styles.css
@@ -1,7 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Montserrat:wght@500;700&display=swap");
+
 html,
 body {
+  font-family: "Montserrat" !important;
   height: 100%;
   margin: 0;
+  background-color: #cdcfcd !important;
 }
 
 .sidebar {
@@ -9,7 +13,8 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  background-color: #f8f9fa;
+  background-color: #161c21;
+  color: #fff;
   padding: 1rem;
   width: 280px;
 }
