--- a/Signup/styles.css
+++ b/Signup/styles.css
@@ -17,26 +17,22 @@ body {
   z-index: 2;
 }
 
-.form-signin .firstName {
+#firstName {
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
 }
 
-.form-signin .lastName {
+#lastName, #email {
   border-radius: 0;
 }
 
-.form-signin .email {
-  border-radius: 0;
-}
-
-.form-signin .password {
+#password {
   margin-bottom: 10px;
-  border-top-left-radius: 0 !important;
-  border-top-right-radius: 0 !important;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
 }
 
-.password-toggle-btn {
+#passwordToggleBtn {
   border: none;
   background: transparent;
   position: absolute;
