--- a/SpendSense/Transactions/styles.css
+++ b/SpendSense/Transactions/styles.css
@@ -19,6 +19,14 @@ body {
   width: 280px;
 }
 
+.active {
+    background-color: #5e766c !important;
+  }
+
+.settings {
+  padding-left: 5px;
+}
+
 .title {
   margin-bottom: 0 !important;
 }
@@ -30,4 +38,48 @@ body {
 
 .btn {
   background-color: #5e766c !important;
+}
+
+@media (max-width: 1000px) {
+  .sidebar {
+    width: 60px;
+  }
+
+  .sidebar .d-flex {
+    justify-content: center;
+  }
+
+  .logo {
+    width: 40px;
+    height: 40px;
+  }
+
+  .title {
+    display: none;
+  }
+
+  .nav .nav-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px 0;
+  }
+
+  .icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .description {
+    display: none !important;
+  }
+
+  .settings {
+    display: none !important;
+  }
+
+  .content {
+    margin-left: 60px;
+  }
 }
