--- a/Login/styles.css
+++ b/Login/styles.css
@@ -5,6 +5,7 @@ body {
   font-family: "Montserrat" !important;
   height: 100%;
   margin: 0;
+  padding: 1rem;
   background-color: #cdcfcd !important;
 }
 
