--- a/SpendSense/Transactions/styles.css
+++ b/SpendSense/Transactions/styles.css
@@ -1,3 +1,12 @@
 .btn {
   background-color: #5e766c !important;
 }
+
+.btn-danger {
+  background-color: #dc3545 !important; 
+}
+
+.transaction-history {
+  max-height: 300px;
+  overflow-y: auto;
+}
