updated the landing page

--- a/styles.css
+++ b/styles.css
@@ -9,11 +9,11 @@ body {
   padding: 0;
 }
 
-.info-div{
+/* .info-div{
   background-color: #cdcfcd !important;
   max-width: 100% !important;
   padding: 100px !important;
-}
+} */
 
 .card-title{
   color: #5e766c !important;
