--- a/SpendSense/Sidebar/styles.css
+++ b/SpendSense/Sidebar/styles.css
@@ -5,7 +5,7 @@ body {
   font-family: "Montserrat" !important;
   height: 100%;
   margin: 0;
-  background-color: #cdcfcd !important;
+  background-color: #6a8b76 !important;
 }
 
 .sidebar {
