--- a/SpendSense/Transactions/styles.css
+++ b/SpendSense/Transactions/styles.css
@@ -1,5 +1,6 @@
 .btn {
-  background-color: #6a8b76 !important;
+  background-color: #293134 !important;
+  color: white !important;
 }
 
 .btn-danger {
