--- a/Login/styles.css
+++ b/Login/styles.css
@@ -6,7 +6,7 @@ body {
   height: 100%;
   margin: 0;
   padding: 1rem;
-  background-color: #cdcfcd !important;
+  background-color: #6a8b76 !important;
 }
 
 .form-signin {
@@ -41,5 +41,6 @@ body {
 }
 
 .btn {
-  background-color: #6a8b76 !important;
+  background-color: #293134 !important;
+  color: white !important;
 }
