--- a/SpendSense/Dashboard/styles.css
+++ b/SpendSense/Dashboard/styles.css
@@ -1,15 +1,15 @@
-.title{
+.title {
   color: whi;
 }
 .card {
   height: 150px !important;
 }
 
-.card-title{
+.card-title {
   padding: 1rem 1rem 0 1rem;
 }
 
-.card-body{
+.card-body {
   padding-top: 0px !important;
   overflow-y: auto;
 }
@@ -66,22 +66,39 @@
   }
 }
 
+.modal {
+  z-index: 1040;
+}
+
+.modal-backdrop {
+  z-index: 1040;
+}
+
+#alert-container {
+  z-index: 1060;
+}
+
+.alert {
+  z-index: 1060;
+}
+
 .confirmation-overlay {
   position: fixed;
   top: 0;
   left: 0;
   width: 100vw;
   height: 100vh;
-  background-color: rgba(0, 0, 0, 0.3); /* Optional: darkens background */
+  background-color: rgba(0, 0, 0, 0.3);
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1055;
+  z-index: 1061;
 }
 
 .confirm-box {
   min-width: 300px;
   max-width: 90%;
   animation: slideInRight 0.4s ease-out;
-  box-shadow: 0 4px 16px rgba(0,0,0,0.2);
+  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
+  z-index: 1062;
 }
